# flowgentic

./: .coverage  .env  .env.12  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yml  graph_execution_report.md  mkdocs.yml  pyproject.toml  sequential-turorial.md
.github/workflows/: continuous_integration.yml  docs-deployment.yml  linter_formatter.yml
agent_execution_results/: execution_summary.md
agent_run_data/: agent_interactions.md  agent_interactions_43e1f3f8-ee6a-4fd0-9e8a-abf7d187187b.md  agent_interactions_c81676d4-65cc-4a79-8cea-b660aadb8fa0.md
ai-docs/langgraph/: add-memory.md  context.md  memory.md  overview.md  persistence.md
docs/: architecture.md  compare.md  fault_tolerance.md  generate_api_reference.py  index.md  objective.md  observability_integration.md  phased_rollout.md  phases_rollout.md  radical-asyncflow.md
docs/api/: academy.md  index.md  langGraph.md  utils.md
docs/design_patterns/: chatbot.md  hierachical.md  sequential.md  supervisor.md
docs/examples/: chatbot.md  sequential.md
docs/features/: agent-tool-as-mcp.md  chatbot.md  dynamic-graph.md  fault_tolerance.md  logging_configuration.md  mcp.md  memory.md  miscellaneous.md  mutable-graph.md  overview.md  phased_rollout.md  service-task.md  services.md  telemetry.md  tool-as-service.md
docs/styles/: overrides.css
examples/: observability_example.py
examples/academy-integration/01-actor-client/: run.py
examples/academy-integration/02-agent-loop/: run.py
examples/chemcrow/: README.md  requirements.txt  setup_uv.py
examples/chemcrow/config/: hpc_config.yaml  tools_config.yaml
examples/chemcrow/deployment/slurm/: submit.sh
examples/chemcrow/examples/: basic_workflow.py  demo_simple.py
examples/chemcrow/src/: chemcrow_hpc.py
examples/chemcrow/src/tools/: __init__.py  chemical_tools.py
examples/chemcrow/src/utils/: __init__.py  chemistry_utils.py
examples/langgraph-integration/: 01-parallel-tools.py  02-parallel-agents.py  03-memory-basic.py  04-memory-summarization.py  05-memory-with-tools.py  07-tool-as-service-example.py  08-mcp-placeholder-example.py  README.md  dummy-example.py  dummy_example.py  eg.py
examples/langgraph-integration/chatbot/: main.py
examples/langgraph-integration/chatbot-tutorial/: 01-chatbot-basic.py  02-chatbot-tools.py  03-chatbot-memory.py  04-chatbot-human-in-the-loop.py
examples/langgraph-integration/design_patterns/chatbot/: main.py
examples/langgraph-integration/design_patterns/sequential/: main.py
examples/langgraph-integration/design_patterns/supervisor/: README.md  main.py
examples/langgraph-integration/distributed-memory/: README.md  distributed_memory_example.py
examples/langgraph-integration/mcp/: README.md
examples/langgraph-integration/mcp/toy/: 08-mcp-placeholder-example.py  (+1 more)
examples/langgraph-integration/memory/: 03-memory-basic.py  04-memory-summarization.py  05-memory-with-tools.py
examples/langgraph-integration/miscellaneous/: README_DYNAMIC_GRAPH.md  mutable-graph-creation.py  runtime-graph-creation.py
examples/langgraph-integration/multi-agent/: supervisor.py
examples/langgraph-integration/no-tools/: 01-hello-world.py
examples/langgraph-integration/service-task/: 01-service-task-example.py  02_agent_tool_as_service_example.py  06-service-task-example.py  07-tool-as-service-example.py  README.md  service-intermittent.py  service-task.py
observability_data/: logs.json
src/flowgentic/: __init__.py  academy.py  langgraph.py  llm_providers.py
src/flowgentic/langGraph/: __init__.py  agent_logger.py  agents.py  base_components.py  distributed_memory.py  dynamic_graph.py  execution_wrappers.py  fault_tolerance.py  main.py  memory.py  mutable_graph.py  utils.py
src/flowgentic/settings/: extract_settings.py
src/flowgentic/utils/: __init__.py  llm_providers.py
tests/: test_generator.py  test_introspection.py  test_memory.py  test_observability_integration.py
tests/integration/: test_integration.py
tests/unit/: test_distributed_memory.py  test_generator.py  test_introspection.py  test_memory.py
(+86 files in other folders)
