[project]
name = "flowgentic"
version = "0.1.0"
description = "A library to enable running agentic frameworks on HPC environments."
readme = "README.md"
authors = [
    { name = "Aymen Alsaadi", email = "aymen.alsaadi@rutgers.edu" },
    { name = "Yousef Amirghofran", email = "yamirghofran.ieu2023@student.ie.edu" },
    { name = "Javier Dominguez", email = "jdominguez.ieu2023@student.ie.edu"},
    { name = "Matteo Turilli", email = "mturilli@faculty.ie.edu"}
]
requires-python = ">=3.9"
dependencies = [
    "academy-py",
    "langgraph>=0.6.6",
    "radical-asyncflow",
]
[project.optional-dependencies]
dev = [
    "ruff>=0.12.11"
]

[project.scripts]
flowgentic = "flowgentic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
academy-py = { git = "https://github.com/proxystore/academy" }
radical-asyncflow = { git = "https://github.com/radical-cybertools/radical.asyncflow.git" }
