[project]
name = "flowgentic"
version = "0.1.0"
description = "A library to enable running agentic frameworks on HPC environments."
readme = "README.md"
authors = [
    { name = "Aymen Alsaadi", email = "aymen.alsaadi@rutgers.edu" },
    { name = "Yousef Amirghofran", email = "yamirghofran.ieu2023@student.ie.edu" },
    { name = "Javier Dominguez", email = "jdominguez.ieu2023@student.ie.edu"},
    { name = "Matteo Turilli", email = "mturilli@faculty.ie.edu"}
]
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.6.6",
    "radical.asyncflow @ git+https://github.com/radical-cybertools/radical.asyncflow.git@main",
    "langchain-openai",
    "langchain-core",
    "langchain-community",
    "radical-asyncflow",
    "python-dotenv",
    "academy-py" 
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.11"
]

[project.scripts]
flowgentic = "flowgentic:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
academy-py = { git = "https://github.com/proxystore/academy" }
radical-asyncflow = { git = "https://github.com/radical-cybertools/radical.asyncflow.git" }
